--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ set(${PROJECT_NAME}_TESTS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/tests)
 # files
 file(GLOB_RECURSE SOURCES ${${PROJECT_NAME}_SOURCE_DIR}/*.cpp)
 file(GLOB_RECURSE HEADERS ${${PROJECT_NAME}_INCLUDE_DIR}/*.hpp)
-file(GLOB_RECURSE EMBEDDED ${${PROJECT_NAME}_SOURCE_DIR}/res/*.hpp)
+file(GLOB_RECURSE EMBEDDED ${${PROJECT_NAME}_SOURCE_DIR}/impl/*.hpp)
 file(GLOB_RECURSE TESTS ${${PROJECT_NAME}_TESTS_DIR}/*.cpp)
 
 # toto engine
