--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vendors/imgui"]
 	path = vendors/imgui
 	url = https://github.com/ocornut/imgui
+[submodule "vendors/stb"]
+	path = vendors/stb
+	url = https://github.com/nothings/stb
