tests are now their own executables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ set(${PROJECT_NAME}_VENDORS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/vendors)
 
 set(${PROJECT_NAME}_TESTS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/tests)
 set(${PROJECT_NAME}_TESTS_ASSETS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/tests_assets)
+set(${PROJECT_NAME}_TESPERIMENT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/tesperiment)
 
 # files
 file(GLOB_RECURSE SOURCES ${${PROJECT_NAME}_SOURCE_DIR}/*.cpp)
@@ -42,14 +43,34 @@ set_target_properties(${PROJECT_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${${PR
 set_target_properties(${PROJECT_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${${PROJECT_NAME}_OUTPUT_LIB})
 Cool__target_copy_folder(${PROJECT_NAME} ${${PROJECT_NAME}_INCLUDE_DIR})
 
-# tests
-add_executable(${PROJECT_NAME}_tests ${TESTS})
-target_link_libraries(${PROJECT_NAME}_tests PUBLIC ${PROJECT_NAME} imgui stb)
-target_include_directories(${PROJECT_NAME}_tests PUBLIC ${${PROJECT_NAME}_INCLUDE_DIR} ${${PROJECT_NAME}_TESTS_DIR})
-set_target_properties(${PROJECT_NAME}_tests PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${${PROJECT_NAME}_OUTPUT_BIN})
-Cool__target_copy_folder(${PROJECT_NAME}_tests ${${PROJECT_NAME}_TESTS_ASSETS_DIR})
-if (MSVC)
-    target_compile_options(${PROJECT_NAME}_tests PRIVATE /W3)
-else()
-    target_compile_options(${PROJECT_NAME}_tests PRIVATE -Wall -Wextra -Wpedantic -pedantic-errors)
-endif()
+# # tests
+# add_executable(${PROJECT_NAME}_tests ${TESTS})
+# target_link_libraries(${PROJECT_NAME}_tests PUBLIC ${PROJECT_NAME} imgui stb)
+# target_include_directories(${PROJECT_NAME}_tests PUBLIC ${${PROJECT_NAME}_INCLUDE_DIR} ${${PROJECT_NAME}_TESTS_DIR})
+# set_target_properties(${PROJECT_NAME}_tests PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${${PROJECT_NAME}_OUTPUT_BIN})
+# Cool__target_copy_folder(${PROJECT_NAME}_tests ${${PROJECT_NAME}_TESTS_ASSETS_DIR})
+# if (MSVC)
+#     target_compile_options(${PROJECT_NAME}_tests PRIVATE /W3)
+# else()
+#     target_compile_options(${PROJECT_NAME}_tests PRIVATE -Wall -Wextra -Wpedantic -pedantic-errors)
+# endif()
+
+# tesperiment
+file(GLOB TESPERIMENT_FOLDERS ${${PROJECT_NAME}_TESPERIMENT_DIR}/*)
+foreach(TESPERIMENT_FOLDER ${TESPERIMENT_FOLDERS})
+    if(IS_DIRECTORY ${TESPERIMENT_FOLDER})
+        get_filename_component(TESPERIMENT_FOLDER_NAME ${TESPERIMENT_FOLDER} NAME)
+        message(STATUS "TESPERIMENT_FOLDER_NAME: ${TESPERIMENT_FOLDER_NAME}")
+        file(GLOB_RECURSE TESPERIMENT_SOURCES ${TESPERIMENT_FOLDER}/*.cpp)
+        file(GLOB_RECURSE TESPERIMENT_HEADERS ${TESPERIMENT_FOLDER}/*.hpp)
+        add_executable(${PROJECT_NAME}_test_${TESPERIMENT_FOLDER_NAME} ${TESPERIMENT_SOURCES} ${TESPERIMENT_HEADERS})
+        target_link_libraries(${PROJECT_NAME}_test_${TESPERIMENT_FOLDER_NAME} PUBLIC ${PROJECT_NAME} imgui stb)
+        target_include_directories(${PROJECT_NAME}_test_${TESPERIMENT_FOLDER_NAME} PUBLIC ${${PROJECT_NAME}_INCLUDE_DIR} ${TESPERIMENT_FOLDER})
+        set_target_properties(${PROJECT_NAME}_test_${TESPERIMENT_FOLDER_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${${PROJECT_NAME}_OUTPUT_BIN})
+        if (MSVC)
+            target_compile_options(${PROJECT_NAME}_test_${TESPERIMENT_FOLDER_NAME} PRIVATE /W3)
+        else()
+            target_compile_options(${PROJECT_NAME}_test_${TESPERIMENT_FOLDER_NAME} PRIVATE -Wall -Wextra -Wpedantic -pedantic-errors)
+        endif()
+    endif()
+endforeach()
